test/corpus/instance.txt
========
Instance
========

Instance: TestInst
Description: "Test Instance"

---

(doc
  (instance
    (name
      (sequence))
    (instance_metadata
      (description
        (string
          (double_quote_string_fragment))))))
