test/corpus/invariant.txt
=========
Invariant
=========

Invariant: TestInv
Description: "Test Invariant"

---

(doc
  (invariant
    (name
      (sequence))
    (invariant_metadata
      (description
        (string
          (double_quote_string_fragment))))))
