test/corpus/valueset.txt
========
ValueSet
========

ValueSet: TestVS
Description: "Test ValueSet"

---

(doc
  (valueset
    (name
      (sequence))
    (vs_metadata
      (description
        (string
          (double_quote_string_fragment))))))
